--- a/index.html
+++ b/index.html
@@ -14,16 +14,29 @@
 
 <body>
   <main>
-    Learning
-
-    Published 21 Dec 2023
-
-    HTML & CSS foundations
-
-    These languages are the backbone of every website, defining structure, content, and presentation.
-
-    Greg Hooper
-
+    <div class="blog-preview-card">
+      <img src="/assets/images/illustration-article.svg" alt="Blog preview image" class="blog-preivew-card__image">
+      <div class="blog-preview-card__content">
+        <p class="blog-preview-card__category">
+          Learning
+        </p>
+        <p class="blog-preview-card__publish-date">
+          Published 21 Dec 2023
+        </p>
+        <h1 class="blog-preview-card__title">
+          HTML & CSS foundations
+        </h1>
+        <p class="blog-preview-card__description">
+          These languages are the backbone of every website, defining structure, content, and presentation.
+        </p>
+      </div>
+      <div class="blog-preview-card__author">
+        <img src="/assets/images/image-avatar.webp" alt="Greg Hooper profile image" width="32px" height="32px">
+        <p>
+          Greg Hooper
+        </p>
+      </div>
+    </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/AnonymousCoder323">Anonymous Coder</a>.
