--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Published 21 Dec 2023
         </p>
         <h1 class="blog-preview-card__title">
-          HTML &amp CSS foundations
+          <a class="blog-preview-card__title_link" href="#">HTML &amp CSS foundations</a>
         </h1>
         <p class="blog-preview-card__description">
           These languages are the backbone of every website, defining structure, content, and presentation.
