changed .webp to .gif for profile image due to issue with github not displaying it

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div class="blog-preview-card__author">
-        <img src="assets/images/image-avatar.webp" alt="Greg Hooper profile image" width="32px" height="32px">
+        <img src="assets/images/image-avatar.gif" alt="Greg Hooper profile image" width="32px" height="32px">
         <p>
           Greg Hooper
         </p>
