removed px from img

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div class="blog-preview-card__author">
-        <img src="assets/images/image-avatar.png" alt="Greg Hooper profile image" width="32px" height="32px">
+        <img src="assets/images/image-avatar.png" alt="Greg Hooper profile image" width="32" height="32">
         <p>
           Greg Hooper
         </p>
